[package]
name = "stage_divetoheart"
version = "1.0.0"
authors = ["ThatNintendoNerd"]
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
smash = { git = "https://github.com/blu-dev/smash-rs.git" }
smash_stage = { path = "../smash_stage" }
hash40 = { git = "https://github.com/BenHall-7/hash40-rs.git" }
ninput = { git = "https://github.com/blu-dev/ninput.git" }
atomic = "0.5"
once_cell = "1.13"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
