[package]
name = "stage_divetoheart"
version = "2.0.0"
authors = ["ThatNintendoNerd"]
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
smash_stage = { path = "../smash_stage" }
hash40 = "1.3.1"
memchr = "2.7.2"
ninput = { git = "https://github.com/blu-dev/ninput.git" }
once_cell = "1.19.0"
parking_lot = "0.12.1"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.12"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
